--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "kaleido>=1.0.0",
     "mlipx<0.2,>=0.1.5",
     "scikit-learn>=1.7.1",
+    "torch>=2.8.0",
     "typer<1.0.0,>=0.19.1",
 ]
 
