--- a/ml_peg/analysis/physicality/oxidation_states/metrics.yml
+++ b/ml_peg/analysis/physicality/oxidation_states/metrics.yml
@@ -1,11 +1,12 @@
 metrics:
   Fe-O RDF Peak Split:
-    good: 0.5
+    good: 1.0
     bad: 0.0
-    unit: null
+    unit: Yes(1)/No(0)
     tooltip: Whether there is a split between Fe-O RDF peaks for different iron oxidation states
-  Peak Within DFT Ref:
-    good: 0.5
+  Peak Within Experimental Ref:
+    good: 1.0
     bad: 0.0
     unit: null
     tooltip: Whether the RDF peak positions match PBE peaks
+    level_of_theory: Experiment
